2008-12-14  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/scaledfont.cc: actually fix a reference-counting issue with
	ScaledFont::get_font_face() that I thought I had fixed in b1d01ff7
	* tests/test-scaled-font.cc: add a test for the get_font_face() bug

2008-12-12  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in: bump version since we forgot to do it after release

2008-12-12  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/types.h: add cross-reference links to the cairo manual for all types
	that are just typedefs of C structs

2008-12-12  Jonathon Jongsma  <jonathon@quotidian.org>

	* .gitignore: ignore the new example executable names
	* examples/text/Makefile.am: normalize the text-rotate example
	executable name
	* examples/text/text-rotate.cc: print a message to the terminal explaining
	that a file was written

2008-12-12  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/surface.h: add the surface examples to the doxygen documentation

2008-12-12  Jonathon Jongsma  <jonathon@quotidian.org>

	Restructure the examples directory so that there aren't so many subdirs, which
	tends to slow down builds since they can't be done in parallel.  Also
	'standardize' the executable names a bit more and give the source files
	meaningful names rather than 'main.cc' or similar

	* configure.in:
	* examples/.cvsignore: Removed.
	* examples/Makefile.am:
	* examples/README:
	* examples/pdf-surface/.cvsignore: Removed.
	* examples/pdf-surface/Makefile.am: Removed.
	* examples/png_file/.cvsignore: Removed.
	* examples/png_file/Makefile.am: Removed.
	* examples/ps-surface/.cvsignore: Removed.
	* examples/ps-surface/Makefile.am: Removed.
	* examples/surfaces/image-surface.cc: Renamed from examples/png_file/main.cc.
	* examples/surfaces/pdf-surface.cc: Renamed from examples/pdf-surface/main.cc.
	* examples/surfaces/ps-surface.cc: Renamed from examples/ps-surface/main.cc.